# yolov11-yolov8-dnn-Classify-Detect-Obb-Pose-Seg

./: .clang-format  CMakeLists.txt  README.md  main.cpp
data/cfg/: className_1000.txt
include/: Classify.h  Detect.h  Obb.h  Pose.h  Seg.h  YOLO.h  test.h
src/: Classify.cpp  Detect.cpp  Obb.cpp  Pose.cpp  Seg.cpp  YOLO.cpp  test.cpp
